# FFmpegLearn

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jni/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
ffmpeglib/: build.gradle.kts
ffmpeglib/src/main/: CMakeLists.txt
ffmpeglib/src/main/cpp/: CMakeLists.txt  android_log.h  ffmpeglib.cpp
ffmpeglib/src/main/cpp/libavutil/: ffversion.h
ffmpeglib/src/main/java/com/example/ffmpeglib/: NativeLib.java
ffmpeglib/src/main/libs/arm64-v8a/: notice.md
gradle/wrapper/: gradle-wrapper.properties
